# Remote-Antenna-Switch

./: README.md
AndroidBT_APP/: a.aia  a.apk
AntennaControllerMaTouch/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_MainScreen.c  ui_events.h  ui_font_Font2.c  ui_font_LightsOut80.c  ui_helpers.h  ui_img_logo_ei9sp_png.c
AntennaRemoteControler/: AntennaRemoteControler.ino  SPIFFS.ino  oled.ino  rs485_display.ino  translations.ino  wifi.ino
AntennaRemoteControler/data/: style.css  wifimanager.html
Controller_V2/: ReadMe.md
Controller_V2/AntennaController/: AntennaController copy.ino.txt  AntennaController.ino  CMakeLists.txt  backupmain.txt  filelist.txt  lv_conf_.h  net_helpers.ino  switchCommands.ino  ui.c  ui.h  ui_MainScreen.c  ui_Settings.c  ui_Splash.c  ui_events.cpp  ui_events.h  ui_font_Font23.c  ui_font_Font80.c  ui_font_LightsOut60.c  ui_helpers2.ino  ui_img_logo_ei9sp_png.c
Controller_V2/AntennaControllerMaTouch_saandbox/: AntennaControllerMaTouch.ino  touch.h.txt  ui_Settings.c  ui_Splash.c  ui_font_Font1.c  ui_font_Font801.c  ui_font_LightsOut40.c  ui_helpers.c
Controller_v1/AntennaRemoteControler/: comms.ino
Display_Simple/: CMakeLists.txt  Mini.ino  filelist.txt  lv_conf.h  touch.h  ui.c  ui.h  ui_Screen1.c  ui_events.cpp  ui_img_1861550729.c  ui_img_big_squarer_png.c  ui_img_buttonr_png.c  ui_img_line4_png.c
Documents/mf_Lvgl 2/: lv_conf_template.h
Hardware/KiCad/: DRC.rpt  ERC.rpt  RS485_antenna_switch_v1.2-rescue.kicad_sym  RS485_antenna_switch_v1.2.kicad_pcb  RS485_antenna_switch_v1.2.kicad_prl  RS485_antenna_switch_v1.2.kicad_pro  (+4 more)
(+14 files in other folders)
